Fix repaint of scrolling contents layer on layout overflow change.

If a composited scroller with a solid-color background has its layout overflow
rect resized, the scrolling contents layer needs a paint invalidation.

This broke in r497601, which made the scrolling contents layer's invalidation
conditional on BackgroundGeometryDependsOnLayoutOverflowRect.

Bug: 759436, 734187
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I6dd689dc6766bf76cc4c6d7a3915e0cd2202cda6
Reviewed-on: https://chromium-review.googlesource.com/639011
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498305}
Former-commit-id: 14e906a67f9ae321535d917a486c14a17b7ea3cb